--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-app",
+  "name": "irdb-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "solid-auth-client": "^2.5.6",
     "web-vitals": "^0.2.4"
   },
